<resources>
    <string name="app_name">asamarsal</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Sign in or register</string>
    <string name="action_login_short">LOGIN</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="appversion">App Ver 1.0.0–20013FEA6BCC820C</string>
    <string name="kunjungan">Kunjungan pada bulan agustus 2023</string>
    <string name="tulisan150">150</string>
    <string name="tulisantotalscore">Total Score</string>
    <string name="tulisanactualscore">Actual Score</string>
    <string name="tulisanpercentage">Percentage</string>
    <string name="tulisanmenu">Menu</string>
    <string name="tulisankunjungan">Kunjungan</string>
    <string name="tulisandashboard">Dashboard</string>
    <string name="tulisantargetinstall">Target Install</string>
    <string name="tulisancdfdpc">CDFDPC</string>
    <string name="tulisantransmission">Transmission</string>
    <string name="tulisanhistory">History</string>
    <string name="tulisanlogout">Logout</string>
    <string name="tulisanmainmenu">Main Menu</string>
    <string name="tulisannamaprofile">Mitha Khairulnisa</string>
    <string name="tulisanrole">Role : Pembeli</string>
    <string name="tulisannik">NIK : MD000001</string>
    <string name="tulisanliststore">List Store</string>
    <string name="tulisanusera">User A</string>
    <string name="tulisanlistkunjungan">List Kunjungan 19–08–2023</string>
    <string name="title_activity_list_store">ListStore</string>
    <string name="gmapsapikey">AIzaSyDEdJIDr2pRw8zJ0ZDyQjcteLQ22CciSFs</string>
    <string name="title_activity_list_store1">ListStore</string>
    <string name="tulisankeepusername">Keep Username</string>
    <string name="tulisancheckupdate">Check Update</string>
    <string name="tulisaninformation">Information</string>
    <string name="tulisanproductcheck">Product\nCheck</string>
    <string name="tulisanskupromo">SKU\nPromo</string>
    <string name="tulisanringkasanoos">Ringkasan\nOOS</string>
    <string name="tulisanrinstoreinvestment">Store Investment</string>
    <string name="tulisanselesai">Selesai</string>
    <string name="tulisanseptember">September 2020</string>
    <string name="tulisan50persen">50%</string>
    <string name="tulisan80persen">80%</string>
    <string name="tulisan40">40</string>
    <string name="tulisan20">20</string>
    <string name="tulisan80">80</string>
    <string name="tulisan100">100</string>
    <string name="tulisantarget">Target</string>
    <string name="tulisanpencapaian">Pencapaian</string>
    <string name="tulisanosa">OSA</string>
    <string name="tulisannpd">NPD</string>
    <string name="tulisanreset">Reset</string>
    <string name="tulisantipeoutlet">Tipe Outlet</string>
    <string name="tulisantipedisplay">Tipe Display</string>
    <string name="tulisansubtipedisplay">Sub Tipe Display</string>
    <string name="tulisanertm">ERTM</string>
    <string name="tulisanpareto">Pareto</string>
    <string name="tulisanemerchandising">E-Merchandising</string>
    <string name="tulisanya">Ya</string>
    <string name="tulisantipe">Franchise</string>
    <string name="tulisankeren">Keren</string>
    <string name="tulisanlastvisit">Last Visit</string>
    <string name="tulisantanggalvisit">08–08–2023</string>
    <string name="tulisanmantap">Mantap</string>
    <string name="tulisantitikdua">:</string>
    <string name="tulisanlokasibelumsesuai">Lokasi Belum Sesuai</string>
    <string name="tulisandashboardstore">Dashboard Store</string>
    <string name="tulisanperfectstore">Perfect Store</string>
    <string name="runningtext">Untuk support yang luar biasa di masa-masa covid-19 seperti ini. Semoga sehat selalu</string>
    <string name="kodetoko">ST0001</string>
    <string name="namatoko">Indomaret Washington</string>
    <string name="clustertoko">Cluster : Small</string>
    <string name="clustertokoa">Cluster : Small</string>
    <string name="tulisantokoa">Toko Spiderman</string>
    <string name="tulisantokob">Toko Ironman</string>
    <string name="tulisantokoc">Toko Batman</string>
    <string name="tulisantokod">Toko Wonderwoman</string>
    <string name="keterangantokoa">TT Regular - IRTM Big Store</string>
    <string name="keterangantoko">TT Regular - ERTM Big - Pareto</string>
    <string name="tulisanvisit">Visit</string>
    <string name="tulisannovisit">No Visit</string>
    <string name="tulisannamajalan">Jalan Sepak Bola No.07 Argentina Selatan</string>
    <string name="jaraka">1 M</string>
    <string name="jarakb">2 M</string>
    <string name="jarakc">3 M</string>
    <string name="tulisanback">Back</string>
    <string name="tulisanblank">Halaman Ini Kosong</string>
</resources>